test/compile-fail/find-file/duplicate-module-files/expected.txt
error: conflicting files for module `a` were found at ./test/compile-fail/find-file/duplicate-module-files/a.rhdl and ./test/compile-fail/find-file/duplicate-module-files/a/mod.rhdl
  ┌─ ./test/compile-fail/find-file/duplicate-module-files/top.rhdl:1:1
  │
1 │ mod a;
  │ ^^^^^^ declared here

